Changed headings and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berth Allocation AI - Visakhapatnam Port Authority</title>
+    <title>SmartPort - Visakhapatnam Port Authority</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -118,7 +118,7 @@
                     </svg>
                 </div>
                 <div>
-                    <h1 class="text-3xl md:text-4xl font-extrabold text-slate-900 dark:text-white">Berth Allocation AI</h1>
+                    <h1 class="text-3xl md:text-4xl font-extrabold text-slate-900 dark:text-white">SmartPort</h1>
                     <p class="text-base text-slate-700 dark:text-slate-300">Visakhapatnam Port Authority</p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                         <div class="pt-2 border-t border-slate-200 dark:border-slate-700">
                             <div class="flex items-center gap-2 text-sm text-slate-600 dark:text-slate-400">
                                 <div class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
-                                <span>Real-time data integration ready</span>
+                                <span>Real-time data</span>
                             </div>
                         </div>
                     </div>
